Fixed landing page text overflow issue on small screens

--- a/app/assets/stylesheets/components/landing.scss
+++ b/app/assets/stylesheets/components/landing.scss
@@ -228,5 +228,4 @@
   font-size: 1.5rem;
   font-weight: 600;
   margin-bottom: $spacer;
-  white-space: nowrap;
 }
